--- a/programs/test.tt
+++ b/programs/test.tt
@@ -117,11 +117,7 @@ function testarray() {
 }
 
 function fact( x ) {
-	if >( x 1 ) {
-		return *( x fact( -( x 1 ) ) );
-	} else {
-		return 1;
-	}
+	return ?( <e( x 1 ) 1 *( x fact( -( x 1 ) ) ) );
 }
 
 function testswitch() {
