Improve speed test.

--- a/programs/speed.tt
+++ b/programs/speed.tt
@@ -1,6 +1,6 @@
 
 program speed {
-	var time = $time, total = 0, iter = 1024;
+	var time = $time, total = 0, shift = 10;
 	var prog = ${ ( n ) { var a = 0; while <( a n ) { inc a; } return a; } };
 	
 	var worker1 = $worker( prog );
@@ -8,15 +8,16 @@ program speed {
 	var worker3 = $worker( prog );
 	var worker4 = $worker( prog );
 	
-	while <( -( $time time ) 10 ) {
-		call $execute( worker1 iter );
-		call $execute( worker2 iter );
-		call $execute( worker3 iter );
-		call $execute( worker4 iter );
+	while &&( <( -( $time time ) 10 ) <( shift 29 ) ) {
+		var count = <<( 1 shift );
+		call $execute( worker1 count );
+		call $execute( worker2 count );
+		call $execute( worker3 count );
+		call $execute( worker4 count );
 		let total = +( total $result( worker1 ) $result( worker2 ) $result( worker3 ) $result( worker4 ) );
-		let iter = <<( iter 1 );
+		inc shift;
 	}
 	
 	let time = -( $time time );
-	print $cat( "Finished in " time " seconds. " /( total time ) " iterations per second." );
+	print $cat( "Finished in " time " seconds. At least " /( total ?( time time 1 ) ) " iterations per second." );
 }
